automated IDE refactorings, cleanup, optimizations to JDK14+