@@ -2,7 +2,9 @@ package actr.env;
 
 import java.awt.FileDialog;
 import java.io.File;
+import java.util.List;
 import java.util.Vector;
+import java.util.concurrent.atomic.AtomicReference;
 
 import javax.swing.JFrame;
 
@@ -13,24 +15,24 @@ import javax.swing.JFrame;
  * @author Dario Salvucci
  */
 public class Core {
-	private Vector<Frame> frames;
-	private Preferences prefs;
-	private PrefDialog prefDialog;
-	private Frame runLock;
+	private final List<Frame> frames;
+	private final Preferences prefs;
+	private final PrefDialog prefDialog;
+	private final AtomicReference<Frame> runLock = new AtomicReference<>();
 	private JFrame invisibleFrame;
 
-	static String fileToOpen = null;
-	static String starterClass = "actr.tasks.Starter";
+	static final String fileToOpen = null;
+	static final String starterClass = "actr.tasks.Starter";
 
 	Core() {
-		frames = new Vector<Frame>();
+		frames = new Vector<>();
 		prefs = Preferences.load(this);
 		prefDialog = new PrefDialog(this);
 	}
 
 	void startup() {
 		try {
-			Starter starter = (Starter) (Class.forName(starterClass).newInstance());
+			Starter starter = (Starter) (Class.forName(starterClass).getConstructor().newInstance());
 			starter.startup(this);
 		} catch (Exception e) {
 			if (fileToOpen != null)
@@ -66,8 +68,8 @@ public class Core {
 	 */
 	public Frame getFrame(File file) {
 		for (int i = 0; i < frames.size(); i++)
-			if (file.equals(frames.elementAt(i).getFile()))
-				return frames.elementAt(i);
+			if (file.equals(frames.get(i).getFile()))
+				return frames.get(i);
 		return null;
 	}
 
@@ -77,9 +79,10 @@ public class Core {
 	 * @return the current frame, or <tt>null</tt> if no frames exist
 	 */
 	public Frame currentFrame() {
-		for (int i = 0; i < frames.size(); i++)
-			if (frames.elementAt(i).isActive())
-				return frames.elementAt(i);
+		int n = frames.size();
+		for (int i = 0; i < n; i++)
+			if (frames.get(i).isActive())
+				return frames.get(i);
 		return null;
 	}
 
@@ -145,7 +148,7 @@ public class Core {
 
 	void refreshEditors() {
 		for (int i = 0; i < frames.size(); i++)
-			frames.elementAt(i).refresh();
+			frames.get(i).refresh();
 	}
 
 	/**
@@ -171,25 +174,20 @@ public class Core {
 		}
 	}
 
-	synchronized boolean acquireLock(Frame frame) {
-		if (runLock == null) {
-			runLock = frame;
-			return true;
-		} else
-			return false;
+	boolean acquireLock(Frame frame) {
+		return runLock.compareAndSet(null, frame);
 	}
 
-	synchronized void releaseLock(Frame frame) {
-		if (runLock == frame)
-			runLock = null;
+	boolean releaseLock(Frame frame) {
+		return runLock.compareAndSet(frame, null);
 	}
 
-	synchronized boolean hasLock(Frame frame) {
-		return (runLock == frame);
+	boolean hasLock(Frame frame) {
+		return (runLock.getOpaque() == frame);
 	}
 
-	synchronized boolean isAnyModelRunning() {
-		return (runLock != null);
+	boolean isAnyModelRunning() {
+		return (runLock.getOpaque() != null);
 	}
 
 	void openPreferencesDialog() {
@@ -209,7 +207,7 @@ public class Core {
 	 */
 	public boolean closeAllFrames() {
 		for (int i = 0; i < frames.size(); i++)
-			if (!frames.elementAt(i).close())
+			if (!frames.get(i).close())
 				return false;
 		return true;
 	}
@@ -227,7 +225,7 @@ public class Core {
 		return false;
 	}
 
-	private class InvisibleFrame extends JFrame {
+	private static class InvisibleFrame extends JFrame {
 		InvisibleFrame(Core core) {
 			super();
 			setUndecorated(true);
